--- a/index.html
+++ b/index.html
@@ -1,45 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Nayana Swain | Portfolio</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header>
-    <h1>Nayana Swain</h1>
-    <p>Physics Major | Quantum Computing Enthusiast | Developer</p>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
-
-  <section id="about">
-    <h2>About Me</h2>
-    <p>I’m a physics student at Georgia Tech passionate about quantum computing, software, and research.</p>
-  </section>
-
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="project">
-      <h3>Quantum Simulator</h3>
-      <p>A Python simulation of quantum gates using Qiskit.</p>
-      <a href="https://github.com/nayana-swain/quantum-sim">View on GitHub</a>
+<section class="hero">
+  <div class="hero-content">
+    <div class="hero-text">
+      <h1>Hi, I'm Nayana</h1>
+      <h2>Physics Major & Quantum Computing Explorer</h2>
+      <p>I’m passionate about building error-resilient quantum systems and solving real-world problems with code and creativity.</p>
+      <p class="hero-links">
+        <a href="#projects">Projects</a> · 
+        <a href="#about">About</a> · 
+        <a href="#contact">Contact</a>
+      </p>
     </div>
-    <!-- Add more projects here -->
-  </section>
-
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email me at <a href="mailto:nayana@example.com">nayana@example.com</a></p>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Nayana Swain</p>
-  </footer>
-</body>
-</html>
+    <div class="hero-image">
+      <img src="images/profile.jpg" alt="Nayana Swain Portrait">
+    </div>
+  </div>
+</section>
